--- a/Script/get_data.ipynb
+++ b/Script/get_data.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install nsepy\n",
-    "# pip install yfinance"
+    "# !pip install nsepy\n",
+    "# !pip install yfinance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -63,28 +63,28 @@
      "output_type": "stream",
      "text": [
       "^NSEI\n",
-      "4222\n",
+      "4263\n",
       "----------------------------------------------------------------\n",
       "^NSEBANK\n",
-      "3949\n",
+      "3989\n",
       "----------------------------------------------------------------\n",
       "^CNXIT\n",
-      "3934\n",
+      "3974\n",
       "----------------------------------------------------------------\n",
       "^BSESN\n",
-      "6758\n",
+      "6799\n",
       "----------------------------------------------------------------\n",
       "NIFTY_MIDCAP_100.NS\n",
-      "4721\n",
+      "4761\n",
       "----------------------------------------------------------------\n",
       "^CNXPSUBANK\n",
-      "3398\n",
+      "3438\n",
       "----------------------------------------------------------------\n",
       "^CNXAUTO\n",
-      "3286\n",
+      "3326\n",
       "----------------------------------------------------------------\n",
       "NIFTY_FIN_SERVICE.NS\n",
-      "3247\n",
+      "3287\n",
       "----------------------------------------------------------------\n"
      ]
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "2011-09-13 00:00:00+05:30       0        0.0           0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,177 +238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ADANIENT.NS\n",
-      "5572\n",
-      "----------------------------------------------------------------\n",
-      "ASIANPAINT.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "AXISBANK.NS\n",
-      "6506\n",
-      "----------------------------------------------------------------\n",
-      "BAJAJ-AUTO.NS\n",
-      "5573\n",
-      "----------------------------------------------------------------\n",
-      "BAJFINANCE.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "BAJAJFINSV.NS\n",
-      "5539\n",
-      "----------------------------------------------------------------\n",
-      "BHARTIARTL.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "BPCL.NS\n",
-      "7264\n",
-      "----------------------------------------------------------------\n",
-      "BRITANNIA.NS\n",
-      "7267\n",
-      "----------------------------------------------------------------\n",
-      "CIPLA.NS\n",
-      "7267\n",
-      "----------------------------------------------------------------\n",
-      "COALINDIA.NS\n",
-      "3473\n",
-      "----------------------------------------------------------------\n",
-      "DIVISLAB.NS\n",
-      "5391\n",
-      "----------------------------------------------------------------\n",
-      "DRREDDY.NS\n",
-      "7265\n",
-      "----------------------------------------------------------------\n",
-      "EICHERMOT.NS\n",
-      "7265\n",
-      "----------------------------------------------------------------\n",
-      "GRASIM.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "HCLTECH.NS\n",
-      "5544\n",
-      "----------------------------------------------------------------\n",
-      "HDFCBANK.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "HDFCLIFE.NS\n",
-      "1741\n",
-      "----------------------------------------------------------------\n",
-      "HEROMOTOCO.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "HINDALCO.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "HINDUNILVR.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "ICICIBANK.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "ITC.NS\n",
-      "7265\n",
-      "----------------------------------------------------------------\n",
-      "INDUSINDBK.NS\n",
-      "5571\n",
-      "----------------------------------------------------------------\n",
-      "INFY.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "JSWSTEEL.NS\n",
-      "5350\n",
-      "----------------------------------------------------------------\n",
-      "KOTAKBANK.NS\n",
-      "5832\n",
-      "----------------------------------------------------------------\n",
-      "LT.NS\n",
-      "5573\n",
-      "----------------------------------------------------------------\n",
-      "M&M.NS\n",
-      "7266\n",
-      "----------------------------------------------------------------\n",
-      "MARUTI.NS\n",
-      "5306\n",
-      "----------------------------------------------------------------\n",
-      "NESTLEIND.NS\n",
-      "5543\n",
-      "----------------------------------------------------------------\n",
-      "NTPC.NS\n",
-      "4959\n",
-      "----------------------------------------------------------------\n",
-      "ONGC.NS\n",
-      "7265\n",
-      "----------------------------------------------------------------\n",
-      "POWERGRID.NS\n",
-      "4232\n",
-      "----------------------------------------------------------------\n",
-      "RELIANCE.NS\n",
-      "7265\n",
-      "----------------------------------------------------------------\n",
-      "SBILIFE.NS\n",
-      "1773\n",
-      "----------------------------------------------------------------\n",
-      "SBIN.NS\n",
-      "7266\n",
-      "----------------------------------------------------------------\n",
-      "SUNPHARMA.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "TCS.NS\n",
-      "5541\n",
-      "----------------------------------------------------------------\n",
-      "TATACONSUM.NS\n",
-      "7265\n",
-      "----------------------------------------------------------------\n",
-      "TATAMOTORS.NS\n",
-      "8571\n",
-      "----------------------------------------------------------------\n",
-      "TATASTEEL.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "TECHM.NS\n",
-      "4507\n",
-      "----------------------------------------------------------------\n",
-      "TITAN.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "ULTRACEMCO.NS\n",
-      "5540\n",
-      "----------------------------------------------------------------\n",
-      "UPL.NS\n",
-      "5571\n",
-      "----------------------------------------------------------------\n",
-      "WIPRO.NS\n",
-      "7268\n",
-      "----------------------------------------------------------------\n",
-      "APOLLOHOSP.NS\n",
-      "5570\n",
-      "----------------------------------------------------------------\n",
-      "ADANIPORTS.NS\n",
-      "4196\n",
-      "----------------------------------------------------------------\n",
-      "JSWENERGY.NS\n",
-      "3684\n",
-      "----------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for share in share_name:\n",
-    "    print(share)\n",
+    "# for share in share_name:\n",
+    "#     print(share)\n",
     "    \n",
-    "    df = get_data(share)\n",
-    "    print(len(df))\n",
+    "#     df = get_data(share)\n",
+    "#     print(len(df))\n",
     "\n",
-    "    file_name = '../Data/Stocks/' + share.replace(\".NS\", \"\") + '.csv'\n",
-    "    df.to_csv(file_name)\n",
+    "#     file_name = '../Data/Stocks/' + share.replace(\".NS\", \"\") + '.csv'\n",
+    "#     df.to_csv(file_name)\n",
     "    \n",
-    "    print(\"----------------------------------------------------------------\")"
+    "#     print(\"----------------------------------------------------------------\")"
    ]
   },
   {
@@ -420,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -428,58 +271,58 @@
      "output_type": "stream",
      "text": [
       "0P00005WL6.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "UTINEXT50.BO\n",
-      "1812\n",
+      "1853\n",
       "----------------------------------------------------------------\n",
       "0P0000MLHH.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P0000KV39.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P00009J3K.BO\n",
-      "1620\n",
+      "1656\n",
       "----------------------------------------------------------------\n",
       "0P0001BAB5.BO\n",
-      "1702\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P0001EI18.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P0001BA1R.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P00005WEY.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P0000XUXL.BO\n",
-      "1673\n",
+      "1714\n",
       "----------------------------------------------------------------\n",
       "0P0000XUYZ.BO\n",
-      "1672\n",
+      "1714\n",
       "----------------------------------------------------------------\n",
       "0P0000XW8D.BO\n",
-      "1673\n",
+      "1714\n",
       "----------------------------------------------------------------\n",
       "0P0000XVER.BO\n",
-      "1709\n",
+      "1751\n",
       "----------------------------------------------------------------\n",
       "0P0000XUYS.BO\n",
-      "1702\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P0000XW7I.BO\n",
-      "1703\n",
+      "1744\n",
       "----------------------------------------------------------------\n",
       "0P0000U3OG.BO\n",
-      "1673\n",
+      "1715\n",
       "----------------------------------------------------------------\n",
       "SETFGOLD.NS\n",
-      "3835\n",
+      "3876\n",
       "----------------------------------------------------------------\n",
       "BSLGOLDETF.NS\n",
-      "2974\n",
+      "3015\n",
       "----------------------------------------------------------------\n"
      ]
     }
@@ -506,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +453,7 @@
        "7                                 7.75  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -646,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
