--- a/Script/data_prep.ipynb
+++ b/Script/data_prep.ipynb
@@ -2387,7 +2387,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
