Basic LSTM Model and update in feature selection

--- a/Script/get_data.ipynb
+++ b/Script/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -63,28 +63,28 @@
      "output_type": "stream",
      "text": [
       "^NSEI\n",
-      "4263\n",
+      "4272\n",
       "----------------------------------------------------------------\n",
       "^NSEBANK\n",
-      "3989\n",
+      "3998\n",
       "----------------------------------------------------------------\n",
       "^CNXIT\n",
-      "3974\n",
+      "3983\n",
       "----------------------------------------------------------------\n",
       "^BSESN\n",
-      "6799\n",
+      "6808\n",
       "----------------------------------------------------------------\n",
       "NIFTY_MIDCAP_100.NS\n",
-      "4761\n",
+      "4770\n",
       "----------------------------------------------------------------\n",
       "^CNXPSUBANK\n",
-      "3438\n",
+      "3447\n",
       "----------------------------------------------------------------\n",
       "^CNXAUTO\n",
-      "3326\n",
+      "3335\n",
       "----------------------------------------------------------------\n",
       "NIFTY_FIN_SERVICE.NS\n",
-      "3287\n",
+      "3296\n",
       "----------------------------------------------------------------\n"
      ]
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -149,51 +149,51 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2011-09-07 00:00:00+05:30</th>\n",
-       "      <td>4010.679932</td>\n",
-       "      <td>4010.679932</td>\n",
-       "      <td>4010.679932</td>\n",
-       "      <td>4010.679932</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2025-02-11 00:00:00+05:30</th>\n",
+       "      <td>23329.550781</td>\n",
+       "      <td>23358.800781</td>\n",
+       "      <td>22966.000000</td>\n",
+       "      <td>23089.599609</td>\n",
+       "      <td>844300</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-09-08 00:00:00+05:30</th>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2025-02-12 00:00:00+05:30</th>\n",
+       "      <td>23068.250000</td>\n",
+       "      <td>23310.099609</td>\n",
+       "      <td>22819.900391</td>\n",
+       "      <td>23192.800781</td>\n",
+       "      <td>983200</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-09-09 00:00:00+05:30</th>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>4018.360107</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2025-02-13 00:00:00+05:30</th>\n",
+       "      <td>23195.300781</td>\n",
+       "      <td>23485.800781</td>\n",
+       "      <td>23188.449219</td>\n",
+       "      <td>23272.400391</td>\n",
+       "      <td>1022500</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-09-12 00:00:00+05:30</th>\n",
-       "      <td>3942.520020</td>\n",
-       "      <td>3942.520020</td>\n",
-       "      <td>3942.520020</td>\n",
-       "      <td>3942.520020</td>\n",
-       "      <td>0</td>\n",
+       "      <th>2025-02-14 00:00:00+05:30</th>\n",
+       "      <td>23321.800781</td>\n",
+       "      <td>23368.199219</td>\n",
+       "      <td>22998.599609</td>\n",
+       "      <td>23186.900391</td>\n",
+       "      <td>784000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2011-09-13 00:00:00+05:30</th>\n",
-       "      <td>3836.639893</td>\n",
-       "      <td>3836.639893</td>\n",
-       "      <td>3836.639893</td>\n",
-       "      <td>3836.639893</td>\n",
+       "      <th>2025-02-17 00:00:00+05:30</th>\n",
+       "      <td>23053.599609</td>\n",
+       "      <td>23293.800781</td>\n",
+       "      <td>22958.550781</td>\n",
+       "      <td>23271.000000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -203,30 +203,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                                  Open         High          Low        Close  \\\n",
-       "Date                                                                            \n",
-       "2011-09-07 00:00:00+05:30  4010.679932  4010.679932  4010.679932  4010.679932   \n",
-       "2011-09-08 00:00:00+05:30  4018.360107  4018.360107  4018.360107  4018.360107   \n",
-       "2011-09-09 00:00:00+05:30  4018.360107  4018.360107  4018.360107  4018.360107   \n",
-       "2011-09-12 00:00:00+05:30  3942.520020  3942.520020  3942.520020  3942.520020   \n",
-       "2011-09-13 00:00:00+05:30  3836.639893  3836.639893  3836.639893  3836.639893   \n",
+       "                                   Open          High           Low  \\\n",
+       "Date                                                                  \n",
+       "2025-02-11 00:00:00+05:30  23329.550781  23358.800781  22966.000000   \n",
+       "2025-02-12 00:00:00+05:30  23068.250000  23310.099609  22819.900391   \n",
+       "2025-02-13 00:00:00+05:30  23195.300781  23485.800781  23188.449219   \n",
+       "2025-02-14 00:00:00+05:30  23321.800781  23368.199219  22998.599609   \n",
+       "2025-02-17 00:00:00+05:30  23053.599609  23293.800781  22958.550781   \n",
        "\n",
-       "                           Volume  Dividends  Stock Splits  \n",
-       "Date                                                        \n",
-       "2011-09-07 00:00:00+05:30       0        0.0           0.0  \n",
-       "2011-09-08 00:00:00+05:30       0        0.0           0.0  \n",
-       "2011-09-09 00:00:00+05:30       0        0.0           0.0  \n",
-       "2011-09-12 00:00:00+05:30       0        0.0           0.0  \n",
-       "2011-09-13 00:00:00+05:30       0        0.0           0.0  "
+       "                                  Close   Volume  Dividends  Stock Splits  \n",
+       "Date                                                                       \n",
+       "2025-02-11 00:00:00+05:30  23089.599609   844300        0.0           0.0  \n",
+       "2025-02-12 00:00:00+05:30  23192.800781   983200        0.0           0.0  \n",
+       "2025-02-13 00:00:00+05:30  23272.400391  1022500        0.0           0.0  \n",
+       "2025-02-14 00:00:00+05:30  23186.900391   784000        0.0           0.0  \n",
+       "2025-02-17 00:00:00+05:30  23271.000000        0        0.0           0.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "df.tail()"
    ]
   },
   {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -271,58 +271,58 @@
      "output_type": "stream",
      "text": [
       "0P00005WL6.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "UTINEXT50.BO\n",
-      "1853\n",
+      "1863\n",
       "----------------------------------------------------------------\n",
       "0P0000MLHH.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P0000KV39.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P00009J3K.BO\n",
-      "1656\n",
+      "1665\n",
       "----------------------------------------------------------------\n",
       "0P0001BAB5.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P0001EI18.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P0001BA1R.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P00005WEY.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P0000XUXL.BO\n",
-      "1714\n",
+      "1723\n",
       "----------------------------------------------------------------\n",
       "0P0000XUYZ.BO\n",
-      "1714\n",
+      "1723\n",
       "----------------------------------------------------------------\n",
       "0P0000XW8D.BO\n",
-      "1714\n",
+      "1723\n",
       "----------------------------------------------------------------\n",
       "0P0000XVER.BO\n",
-      "1751\n",
+      "1760\n",
       "----------------------------------------------------------------\n",
       "0P0000XUYS.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P0000XW7I.BO\n",
-      "1744\n",
+      "1753\n",
       "----------------------------------------------------------------\n",
       "0P0000U3OG.BO\n",
-      "1715\n",
+      "1724\n",
       "----------------------------------------------------------------\n",
       "SETFGOLD.NS\n",
-      "3876\n",
+      "3886\n",
       "----------------------------------------------------------------\n",
       "BSLGOLDETF.NS\n",
-      "3015\n",
+      "3025\n",
       "----------------------------------------------------------------\n"
      ]
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "7                                 7.75  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
