--- a/Stats/hypothesis_testing.ipynb
+++ b/Stats/hypothesis_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "4263"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "1"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "'Reject the null hypothesis.'"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "'Reject the null hypothesis.'"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,45 +309,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.05594496274574381,\n",
-       " 0.4380715755174588,\n",
-       " 0.052096573025066775,\n",
-       " 0.05974594197359947,\n",
-       " 0.07144689008709688,\n",
-       " 0.051114079793584954,\n",
-       " 0.04872406914156267,\n",
-       " 0.03585186755941641,\n",
-       " 0.0467187406117896,\n",
-       " 0.029151065394414914,\n",
-       " 0.03145659306676252,\n",
-       " 0.03027752464774834,\n",
-       " 0.02338432627588615,\n",
-       " 0.04894210974784222,\n",
-       " 0.05895189252563203,\n",
-       " 0.05964452804225259,\n",
-       " 2.545437780175175,\n",
-       " 0.013899334330575695]"
+       "[0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0,\n",
+       " 0.0003,\n",
+       " 0.0]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MF_mean_return = [df['Percent_Change_In_Price'].dropna().mean() * 100 for df in MF_sheets.values()]\n",
+    "MF_mean_return = [round((df['Percent_Change_In_Price'].dropna().mean() / 100), 4) for df in MF_sheets.values()]\n",
     "MF_mean_return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "'Fail to reject the null hypothesis.'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "4                -0.000014             Negative  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "682                 0.010359             Positive  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +911,7 @@
        "4262          Bullish  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +985,7 @@
        "'Fail to reject the null hypothesis.'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
